# global-capital

./: .gitignore  pyproject.toml  vercel.json
.github/workflows/: update-data.yml
app/: main.py
app/api/: chat.py
data/: borders.json  globe_total.json  scale_totals.json  sector_flows.json  status.json
pipeline/: runner.py
pipeline/fetchers/: billionaires.py  bonds.py  config.py  countries_meta.py  crypto.py  expand_countries.py  historical.py  markets.py  real_estate.py  sovereign_wealth.py  vc_deals.py
static/: index.html  test.html
static/css/: app.css
static/data/: flows.json  globe_total.json  historical.json  scale_totals.json  status.json
static/js/: app.js  globe.js  panel.js  scale.js
