[project]
name = "capital"
version = "0.1.0"
description = "A live map of all the world's capital"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
